Refine api
